Clean code to only set variable=variable when calling function and not when defining function in function.R file and Model_of_each_comparison.Rmd file

--- a/Rscript/Ropls_with_permutated_variable_selection_Models_of_each_comparison.Rmd
+++ b/Rscript/Ropls_with_permutated_variable_selection_Models_of_each_comparison.Rmd
@@ -251,7 +251,7 @@ result_Model1 <-
     subsetdatamatrix,
     ortho_pre_vs,
     ortho_post_vs,
-    classordered, 
+    class=classordered, 
     pcorr,printoptmodel="none",
     plotoptmodel="none",
     no_permutations_post_vs=no_permutations_post_vs_selected_models,
@@ -556,7 +556,7 @@ result_Model2 <-
     subsetdatamatrix,
     ortho_pre_vs,
     ortho_post_vs,
-    classordered, 
+    class=classordered, 
     pcorr,printoptmodel="none",
     plotoptmodel="none",
     no_permutations_post_vs=no_permutations_post_vs_selected_models,
@@ -816,7 +816,7 @@ result_Model3 <-
     subsetdatamatrix,
     ortho_pre_vs,
     ortho_post_vs,
-    classordered, 
+    class=classordered, 
     pcorr,
     printoptmodel="none",
     plotoptmodel="none",
@@ -1066,7 +1066,7 @@ result_Model4 <-
     subsetdatamatrix,
     ortho_pre_vs,
     ortho_post_vs,
-    classordered, 
+    class=classordered, 
     pcorr,
     printoptmodel="none",
     plotoptmodel="none",
