--- a/Rscript/Ropls_with_permutated_variable_selection_Models_of_each_comparison.Rmd
+++ b/Rscript/Ropls_with_permutated_variable_selection_Models_of_each_comparison.Rmd
@@ -232,21 +232,21 @@ pcorr <- calculatepcorrfrompvalue(selectpvalue=p_pearson_of_pcorr_cutoff,n=nrow(
 ```
 ##PCA 
 ###all subjects included in comparison
-```{R}
+```{R PCA}
 
 plot(opls(subsetdatamatrix,typeVc = "x-score",info.txtC="none", fig.pdfC="none"), parAsColFcVn = classordered)
 ```
 
 ###Subjects in `r group1`
 
-```{R}
+```{R PCA group1}
 subsetdatamatrix_group1 <- subset(subsetdatamatrix, subsetsampleID[,paste(colname_groupID)]==group1)
 opls(subsetdatamatrix_group1,typeVc = "x-score",info.txtC="none")
 ```
 
 ###Subjects in `r group2`
 
-```{R}
+```{R PCA group2}
 subsetdatamatrix_group2 <- subset(subsetdatamatrix, subsetsampleID[,paste(colname_groupID)]==group2)
 opls(subsetdatamatrix_group2,typeVc = "x-score",info.txtC="none")
 
@@ -258,7 +258,7 @@ opls(subsetdatamatrix_group2,typeVc = "x-score",info.txtC="none")
 Model post variable selection using p(corr) cutoff `r paste(pcorr); if(pcorr_Model1=="according to p-value"){paste(" which correspond to p-value ", p_pearson_of_pcorr_cutoff)}` and has `r ortho_pre_vs_Model1` orthogonals in model pre variable selection and `r ortho_post_vs_Model1` orthogonals in model post variable selection
 
 
-```{R Model using set pcorr cutoff or from p-value and set amount orthogonal}
+```{R Model1}
 
     ortho_pre_vs <- ortho_pre_vs_Model1
     ortho_post_vs <- ortho_post_vs_Model1
@@ -283,7 +283,7 @@ result_Model1 <-
 ```
 ###Model pre variable selection
 
-```{R}
+```{R plot model pre vs model1}
 result_pre_vs <- result_Model1$beforevsdata.oplsda@summaryDF
 colnames(result_pre_vs)[6] <- "ortho pre v.s."
 kable(result_pre_vs, row.names = T) %>%
@@ -293,7 +293,7 @@ kable(result_pre_vs, row.names = T) %>%
 
 ###Model statistics
 
-```{R}
+```{R plot result model1}
   
 kable(result_Model1$resultaftervs, row.names = T) %>%
   kable_styling(bootstrap_options = "striped", full_width = F)
@@ -308,7 +308,7 @@ if (ortho_post_vs>0) {
 
 ###Score plots
 
-```{R}
+```{R polt score model1}
 
 if (ortho_post_vs>0) {
        plot(result_Model1$aftervsdata.oplsda, typeVc= c("x-score"))
@@ -323,7 +323,7 @@ plotboxplot(result_Model1)
 
 ###Loading plots
 
-```{R}
+```{R plot loading model1}
 
 if (ortho_post_vs>0) {
        plot(result_Model1$aftervsdata.oplsda, typeVc= c("x-loading"))
@@ -339,7 +339,7 @@ if (length(result_Model1$pcorrlistaftervs$pcorrlistaftervs)>=50) {
 
 ###Permutation after variable selection
 
-```{R}
+```{R plot perm post vs model1}
 
 plot(result_Model1$aftervsdata.oplsda, typeVc= c("permutation"))
 
@@ -350,7 +350,7 @@ Subjects were permutated and variable selection performed using p(corr) cutoff `
 
 ####Table of permutation
 
-```{R permutation of model using set pcorr or from p-value and set amount orthogonal}
+```{R permutation pre vs of model1}
 
 testvariablename <- "permutated_models_Model1"
 testvariable <- exist_in_rdata(testvariablename, filename_rdata, directory_output_reports, directory_and_filename_rdata)
@@ -411,7 +411,7 @@ kable(percentage_and_pvalue_perm_Model1, row.names = T) %>%
 
 ####Plot of permutations before variable selection
 
-```{R  plot permutation of model using set pcorr or from p-value and set amount orthogonal, fig.height = 10}
+```{R  plot permutation pre vs Model1, fig.height = 10}
 
 plotpermutationswithoriginalmodelandreg(permutated_models_Model1, subsetdatamatrix, ortho_pre_vs, ortho_post_vs,class=classordered,pcorr,variable_selection_using_VIP)
 
@@ -429,7 +429,7 @@ Selecting model with variable selection using p(corr) cutoff `r pcorr` correspon
 
 ####Table of model pre variable selection with different amount of orthogonal variables in model pre variable selection
 
-```{R table model pre variable selection pcorr from pvalue}
+```{R table model pre vs}
 testvariablename <- "table_different_amount_of_ortho_pre_vs_Model2"
 testvariable <- exist_in_rdata(testvariablename, filename_rdata, directory_output_reports, directory_and_filename_rdata)
 if (!is.null(testvariable)){table_different_amount_of_ortho_pre_vs_Model2 <- testvariable} else {
@@ -460,7 +460,7 @@ no_orto_original_with_max_Q2 <- subset(no_orto_original_with_max_Q2,!duplicated(
 
 ```
 #### Plot of model pre variable selection with different amount of orthogonal variables in model pre variable selection showing differences between R2Y(cum) and Q2(cum) versus Q2(cum)
-```{R plot of model pre variable selection pcorr from pvalue}
+```{R plot of model pre vs}
 
 plotof_model_pre_vs_with_different_amount_of_ortho_pre_vs(
   table_different_amount_of_ortho_pre_vs_Model2
@@ -471,7 +471,7 @@ plotof_model_pre_vs_with_different_amount_of_ortho_pre_vs(
 `r no_orto_original_with_max_Q2$ort` orthogonal latent variables in model pre variable selection give model pre variable selection with highest Q2
 
 
-```{R table post variable selection pcorr from pvalue}
+```{R table post vs Model2}
 ###  Table of model post variable selection with different amount of orthogonal variables in model pre variable selection
 
 testvariablename <- "table_model_post_vs_different_amount_of_ort_in_model_pre_vs_Model2"
@@ -496,7 +496,7 @@ no_orto_original_with_max_Q2_and_diff_less_than_02 <-
 
 ```
 #### Plot of model post variable selection with different amount of orthogonal variables in model pre variable selection showing difference between R2Y(cum) and Q2(cum) versus Q2(cum)
-```{R plot models post variable selection pcorr from pvalue}
+```{R plot models post vs Model2}
 
 plotof_model_post_vs_with_different_amount_of_ortho_pre_vs(
   table_model_post_vs_different_amount_of_ort_in_model_pre_vs_Model2
@@ -511,7 +511,7 @@ plotof_model_post_vs_with_different_amount_of_ortho_pre_vs(
 ####  Table of model post variable selection with different amount of orthogonal variables in model pre variable selection and in model post variable selection 
 
 
-```{R table of orthogonals model post variable selections pcorr from pvalue}
+```{R table of orthogonals model post vs Model2}
 
 testvariablename <- "model_post_vs_table_with_different_amount_of_ortho_pre_and_post_vs_Model2"
 testvariable <- exist_in_rdata(testvariablename, filename_rdata, directory_output_reports, directory_and_filename_rdata)
@@ -544,7 +544,7 @@ selecting_model_with_diff_less_than_02_max_Q2_low_pperm_and_few_orthogonals(
 #### Plot of model post variable selection with different amount of orthogonal variables in model pre variable selection and in model post variable selection showing difference between R2Y(cum) and Q2(cum) versus Q2(cum)
 labels show amount of latent orthogonal variables in model (original,post variable selection)
 
-```{R plot table of orthogonals models post variable selection pcorr from pvalue}
+```{R plot table of orthogonals Model2}
 
 plotof_model_post_vs_table_with_different_amount_of_ortho_pre_and_post_vs(
   model_post_vs_table_with_different_amount_of_ortho_pre_and_post_vs_Model2,no_orto_in_model_pre_vs_and_in_model_post_vs_with_max_Q2_and_diff_less_than_02
@@ -566,7 +566,7 @@ ortho_post_vs_Model2 <- ortho_post_vs
 ###Iteration table
 ####Create iteration table continuously increasing p(corr) during variable selection and adding orthogonals only if it increases Q2 1% in the actual model (i.e. not concidering the total amount of orthogonals pre and post)
 
-```{R iteration table pcorr from pvalue}
+```{R iteration table}
 testvariablename <- "iterationtable_Model2"
 testvariable <- exist_in_rdata(testvariablename, filename_rdata, directory_output_reports, directory_and_filename_rdata)
 if (!is.null(testvariable)){iterationtable_Model2 <- testvariable} else {
@@ -592,7 +592,7 @@ kable(short_iterationtable_Model2, row.names = T) %>%
 ###Model description
 ####Best performing model performing variable selection using p(corr) cutoff `r pcorr` corresponding to p-value `r p_pearson_of_pcorr_cutoff` has `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection before variable selection
 
-```{R Best performing model using pcorr cutoff from p-value}
+```{R Best performing model2}
 
 testvariablename <- "result_Model2"
 testvariable <- exist_in_rdata(testvariablename, filename_rdata, directory_output_reports, directory_and_filename_rdata)
@@ -614,7 +614,7 @@ result_Model2 <-
 ```
 ###Model pre variable selection
 
-```{R}
+```{R plot model pre vs model2}
 result_pre_vs <- result_Model2$beforevsdata.oplsda@summaryDF
 colnames(result_pre_vs)[6] <- "ortho pre v.s."
 kable(result_pre_vs, row.names = T) %>%
@@ -626,7 +626,7 @@ plot(result_Model2$beforevsdata.oplsda , typeVc= c("overview"))
 
 ###Model statistics
 
-```{R}
+```{R plot summary model2}
 
 kable(result_Model2$resultaftervs, row.names = T) %>%
   kable_styling(bootstrap_options = "striped", full_width = F)
@@ -640,7 +640,7 @@ plot(result_Model2$aftervsdata.oplsda, typeVc= c("outlier"))
 
 ###Score plots
 
-```{R}
+```{R plot score model2}
 
 if (ortho_post_vs>0) {
        plot(result_Model2$aftervsdata.oplsda, typeVc= c("x-score"))
@@ -654,7 +654,7 @@ plotboxplot(result_Model2)
 
 ###Loading plots
 
-```{R}
+```{R plot loading model2}
 
 if (ortho_post_vs>0) {
        plot(result_Model2$aftervsdata.oplsda, typeVc= c("x-loading"))
@@ -672,7 +672,7 @@ if (length(result_Model2$pcorrlistaftervs$pcorrlistaftervs)>=50) {
 
 ###Permutation after variable selection
 
-```{R}
+```{R plot perm post vs model2}
 
 plot(result_Model2$aftervsdata.oplsda, typeVc= c("permutation"))
 
@@ -683,7 +683,7 @@ Subjects were permutated and variable selection performed using p(corr) cutoff `
 
 ####Table of permutation
 
-```{R permutation of best performing model pcorr from p-value}
+```{R permutation pre vs Model2}
 
 testvariablename <- "permutated_models_Model2"
 testvariable <- exist_in_rdata(testvariablename, filename_rdata, directory_output_reports, directory_and_filename_rdata)
@@ -741,7 +741,7 @@ kable(percentage_and_pvalue_perm_Model2, row.names = T) %>%
 ```
 ####Plot permutations of best performing model with variable selection using p(corr) cutoff `r pcorr` corresponding to p-value `r p_pearson_of_pcorr_cutoff`
 
-```{R  plot permutation best model pcorr from p-value, fig.height = 10}
+```{R  plot permutation pre vs model2, fig.height = 10}
 
 plotpermutationswithoriginalmodelandreg(permutated_models_Model2, subsetdatamatrix, ortho_pre_vs, ortho_post_vs,class=classordered,pcorr, variable_selection_using_VIP)
 
@@ -807,7 +807,7 @@ plot_pcorrtable_amount_of_variables_with_pcorr_labels(
 ####  Table of models post variable selection with different amount of orthogonal variables in model pre variable selection and in model post variable selection using p(corr)=`r pcorr` giving highest Q2, lowest diff between R2 and Q2 and corresponding to p-value less than `r p_pearson_of_pcorr_cutoff`
 
 
-```{R table of orthogonals models post variable selection pcorr cutoff from Q2}
+```{R table of orthogonals model3}
 
 testvariablename <- "model_post_vs_table_with_different_amount_of_ortho_pre_and_post_vs_Model3"
 testvariable <- exist_in_rdata(testvariablename, filename_rdata, directory_output_reports, directory_and_filename_rdata)
@@ -841,7 +841,7 @@ ortho_post_vs <- no_orto_in_model_pre_vs_and_in_model_post_vs_with_max_Q2_and_di
 #### Plot of model post variable selection with different amount of orthogonal variables in model pre variable selection and in model post variable selection using p(corr)=`r pcorr` giving highest Q2 showing difference between R2Y(cum) and Q2(cum) versus Q2(cum)
 
 labels show amount of latent orthogonal variables in model (original,post variable selection)
-```{R plot table of orthogonals models post variable selection pcorr from Q2}
+```{R plot table of orthogonals model3}
 
 plotof_model_post_vs_table_with_different_amount_of_ortho_pre_and_post_vs(
   model_post_vs_table_with_different_amount_of_ortho_pre_and_post_vs_Model3, no_orto_in_model_pre_vs_and_in_model_post_vs_with_max_Q2_and_diff_less_than_02
@@ -855,7 +855,7 @@ plotof_model_post_vs_table_with_different_amount_of_ortho_pre_and_post_vs(
 ###Model description
 ####Best performing model with variable selection using p(corr) cutoff `r pcorr` with highest Q2 after variable selection resulted in `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection
 
-```{R Best performing model pcorr highest Q2, fig.fullwidth=TRUE}
+```{R Best performing model3, fig.fullwidth=TRUE}
 
 testvariablename <- "result_Model3"
 testvariable <- exist_in_rdata(testvariablename, filename_rdata, directory_output_reports, directory_and_filename_rdata)
@@ -878,7 +878,7 @@ result_Model3 <-
 ```
 ###Model pre variable selection
 
-```{R}
+```{R plot summary model pre vs model3}
 result_pre_vs <- result_Model3$beforevsdata.oplsda@summaryDF
 colnames(result_pre_vs)[6] <- "ortho pre v.s."
 kable(result_pre_vs, row.names = T) %>%
@@ -891,7 +891,7 @@ plot(result_Model3$beforevsdata.oplsda , typeVc= c("overview"))
 
 ###Model statistics
 
-```{R}
+```{R plot summary model3}
 
 kable(result_Model3$resultaftervs, row.names = T) %>%
   kable_styling(bootstrap_options = "striped", full_width = F)
@@ -905,7 +905,7 @@ plot(result_Model3$aftervsdata.oplsda, typeVc= c("outlier"))
 
 ###Score plots
 
-```{R}
+```{R plot score model3}
 
 if (ortho_post_vs>0) {
        plot(result_Model3$aftervsdata.oplsda, typeVc= c("x-score"))
@@ -919,7 +919,7 @@ plotboxplot(result_Model3)
 
 ###Loading plots
 
-```{R}
+```{R plot loading model3}
 
 if (ortho_post_vs>0) {
        plot(result_Model3$aftervsdata.oplsda, typeVc= c("x-loading"))
@@ -935,7 +935,7 @@ if (length(result_Model3$pcorrlistaftervs$pcorrlistaftervs)>=50) {
 
 ###Permutation after variable selection
 
-```{R}
+```{R plot perm post vs model3}
 
 plot(result_Model3$aftervsdata.oplsda, typeVc= c("permutation"))
 
@@ -947,7 +947,7 @@ Subjects were permutated and variable selection performed using p(corr) cutoff `
 
 ####Table of permutations
 
-```{R permutation of best model pcorr with highest Q2}
+```{R permutation pre vs model3}
 
 testvariablename <- "permutated_models_Model3"
 testvariable <- exist_in_rdata(testvariablename, filename_rdata, directory_output_reports, directory_and_filename_rdata)
@@ -1006,7 +1006,7 @@ kable(percentage_and_pvalue_perm_Model3, row.names = T) %>%
 ```
 ####Plot permutations of model with variable selection using p(corr) cutoff `r pcorr` with highest Q2 after variable selection and `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection
 
-```{R plot permutation best model pcorr with highest Q2, fig.height = 10}
+```{R plot permutation pre vs model3, fig.height = 10}
 
 plotpermutationswithoriginalmodelandreg(permutated_models_Model3, subsetdatamatrix, ortho_pre_vs, ortho_post_vs,class=classordered,pcorr, variable_selection_using_VIP)
 
@@ -1014,7 +1014,7 @@ plotpermutationswithoriginalmodelandreg(permutated_models_Model3, subsetdatamatr
 
 #Model 4. Model with p(corr) cutoff giving best performing model and corresponding to p-value for pearson correlation less than userset value and using minimal amount of variables
 
-Model with variable selection using p(corr) corresponding to p-value less than `r p_pearson_of_pcorr_cutoff` which gives model with high Q2, low difference between R2 and Q2, low pQ2 post v.s. and using minimal amount of variables
+Model with variable selection using p(corr) corresponding to p-value less than `r p_pearson_of_pcorr_cutoff` which gives model with high Q2, low difference between R2 and Q2, low pQ2 post variable selection and using minimal amount of variables
 
 ##Optimizing model
 
@@ -1028,7 +1028,7 @@ ortho_post_vs <- ortho_post_vs_Model2
 
 ####Table of models after variable selection using different p(corr) cutoff and using `r ortho_pre_vs` orthogonal in model pre variable selection, `r ortho_post_vs` orthogonal in model post variable selection and using minimal amount of variables.
 
-```{R table using different pcorr cutoff for minimal amount of variables}
+```{R pcorr table model4}
 pcorr_corresponging_to_pvalue <- calculatepcorrfrompvalue(selectpvalue=p_pearson_of_pcorr_cutoff,n=nrow(subsetsampleID))
 
 kable(short_pcorr_table_of_model_post_vs, row.names = T) %>%
@@ -1048,7 +1048,7 @@ Model using minimal amount of variables is indicated in red.
 
 labels show pcorr cutoff
 
-```{R plot pcorr table few variables}
+```{R plot pcorr table model4}
 
 plot_pcorrtable_amount_of_variables_with_pcorr_labels(
     short_pcorr_table_of_model_post_vs,max_pcorrtable_with_max_Q2_and_diff_less_than_02_few_variables)
@@ -1060,7 +1060,7 @@ plot_pcorrtable_amount_of_variables_with_pcorr_labels(
 ####  Table of models post variable selection with different amount of orthogonal variables in model pre variable selection and in model post variable selection using p(corr)=`r pcorr` giving highest Q2, lowest diff between R2 and Q2 and corresponding to p-value less than `r p_pearson_of_pcorr_cutoff` using minimal amount of variables
 
 
-```{R table of orthogonals models post variable selection Model 4}
+```{R table of orthogonals Model 4}
 if (pcorr==result_Model3$resultaftervs$`pcorr cutoff`) {model_post_vs_table_with_different_amount_of_ortho_pre_and_post_vs_Model4 <- model_post_vs_table_with_different_amount_of_ortho_pre_and_post_vs_Model3} else {
 testvariablename <- "model_post_vs_table_with_different_amount_of_ortho_pre_and_post_vs_Model4"
 testvariable <- exist_in_rdata(testvariablename, filename_rdata, directory_output_reports, directory_and_filename_rdata)
@@ -1095,7 +1095,7 @@ ortho_post_vs <- no_orto_in_model_pre_vs_and_in_model_post_vs_with_max_Q2_and_di
 #### Plot of model post variable selection with different amount of orthogonal variables in model pre variable selection and in model post variable selection using p(corr)=`r pcorr` giving highest Q2 while using minimal amount of variables showing difference between R2Y(cum) and Q2(cum) versus Q2(cum)
 
 labels show amount of latent orthogonal variables in model (original,post variable selection)
-```{R plot table of no ortho of models post v.s. Model4}
+```{R plot table of orthogonals Model 4}
 
 plotof_model_post_vs_table_with_different_amount_of_ortho_pre_and_post_vs(
   model_post_vs_table_with_different_amount_of_ortho_pre_and_post_vs_Model4, no_orto_in_model_pre_vs_and_in_model_post_vs_with_max_Q2_and_diff_less_than_02_few_variables
@@ -1132,7 +1132,7 @@ result_Model4 <-
 ```
 ###Model pre variable selection
 
-```{R}
+```{R plot summary model pre vs model4}
 result_pre_vs <- result_Model4$beforevsdata.oplsda@summaryDF
 colnames(result_pre_vs)[6] <- "ortho pre v.s."
 kable(result_pre_vs, row.names = T) %>%
@@ -1145,7 +1145,7 @@ plot(result_Model4$beforevsdata.oplsda , typeVc= c("overview"))
 
 ###Model statistics
 
-```{R}
+```{R plot summary model4}
 
 kable(result_Model4$resultaftervs, row.names = T) %>%
   kable_styling(bootstrap_options = "striped", full_width = F)
@@ -1159,7 +1159,7 @@ plot(result_Model4$aftervsdata.oplsda, typeVc= c("outlier"))
 
 ###Score plots
 
-```{R}
+```{R plot score model 4}
 
 if (ortho_post_vs>0) {
        plot(result_Model4$aftervsdata.oplsda, typeVc= c("x-score"))
@@ -1173,7 +1173,7 @@ plotboxplot(result_Model4)
 
 ###Loading plots
 
-```{R}
+```{R plot loading model4}
 
 if (ortho_post_vs>0) {
        plot(result_Model4$aftervsdata.oplsda, typeVc= c("x-loading"))
@@ -1189,7 +1189,7 @@ if (length(result_Model4$pcorrlistaftervs$pcorrlistaftervs)>=50) {
 
 ###Permutation after variable selection
 
-```{R}
+```{R plot perm post vs model4}
 
 plot(result_Model4$aftervsdata.oplsda, typeVc= c("permutation"))
 
@@ -1201,7 +1201,7 @@ Subjects were permutated and variable selection performed using p(corr) cutoff `
 
 ####Table of permutations
 
-```{R permutation of best model Model 4}
+```{R permutation pre vs of Model 4}
 
 if (result_Model4$resultaftervs$`pcorr cutoff`!=result_Model3$resultaftervs$`pcorr cutoff`) {
 testvariablename <- "permutated_models_Model4"
@@ -1262,7 +1262,7 @@ kable(percentage_and_pvalue_perm_Model4, row.names = T) %>%
 ```
 ####Plot permutations of model with variable selection using p(corr) cutoff `r pcorr` with highest Q2 after variable selection  using minimal amount of variables and `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection
 
-```{R plot permutation best model pcorr with highest Q2 using minimal amount of variables, fig.height = 10}
+```{R plot permutation pre vs model4, fig.height = 10}
 
 plotpermutationswithoriginalmodelandreg(permutated_models_Model4, subsetdatamatrix, ortho_pre_vs, ortho_post_vs,class=classordered,pcorr,variable_selection_using_VIP)
 
