make pca run even if number of subjects are below 7 change crossvalI in function opls to be equal to number of subjects when number of subjects are below 7

--- a/Rscript/Ropls_with_permutated_variable_selection_Models_of_each_comparison.Rmd
+++ b/Rscript/Ropls_with_permutated_variable_selection_Models_of_each_comparison.Rmd
@@ -241,14 +241,16 @@ plot(opls(subsetdatamatrix,typeVc = "x-score",info.txtC="none", fig.pdfC="none")
 
 ```{R PCA group1}
 subsetdatamatrix_group1 <- subset(subsetdatamatrix, subsetsampleID[,paste(colname_groupID)]==group1)
-opls(subsetdatamatrix_group1,typeVc = "x-score",info.txtC="none")
+if (nrow(subsetdatamatrix_group1<7)) {set_crossvalI <- nrow(subsetdatamatrix_group1)} else {set_crossvalI <- 7}
+opls(subsetdatamatrix_group1,typeVc = "x-score",info.txtC="none", crossvalI=set_crossvalI)
 ```
 
 ###Subjects in `r group2`
 
 ```{R PCA group2}
 subsetdatamatrix_group2 <- subset(subsetdatamatrix, subsetsampleID[,paste(colname_groupID)]==group2)
-opls(subsetdatamatrix_group2,typeVc = "x-score",info.txtC="none")
+if (nrow(subsetdatamatrix_group2<7)) {set_crossvalI <- nrow(subsetdatamatrix_group1)} else {set_crossvalI <- 7}
+opls(subsetdatamatrix_group2,typeVc = "x-score",info.txtC="none", crossvalI=set_crossvalI)
 
 ```
 
